<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pragnesh.appshare.MainActivity">

    <Button
        android:id="@+id/sharebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/share_button_design"
        android:shadowColor="#404040"
        android:shadowDx="0"
        android:shadowDy="4"
        android:shadowRadius="3"
        android:text="@string/Share"
        android:textColor="#FFFFFF"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="71dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="27dp"
            android:gravity="center_horizontal"
            android:text="@string/sharePageTitle"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/shareQuestion"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:id="@+id/textView3" />

    <TextView
        android:id="@+id/point_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginBottom="7dp"
        android:layout_marginStart="40dp"
        android:textSize="15sp"
        android:text="@string/point_1" />
    <TextView
        android:id="@+id/point_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/point_1"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="7dp"
        android:textSize="15sp"
        android:text="@string/point_2" />
    <TextView
        android:id="@+id/point_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="40dp"
        android:layout_below="@+id/point_2"
        android:text="@string/point_3" />
    <TextView
        android:id="@+id/Tap_Share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sharebtn"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/tap_share" />


</RelativeLayout>
